# de-challenge

./: Makefile  README.md  pyproject.toml
docs/: challenge_1.md  challenge_2.md
src/hermes/: __main__.py  consumer.py  producer.py
src/orca/: __init__.py  jobs.py  resources.py
src/orca/assets/: order_book_report.py  order_books.py  user_events.py
tests/hermes/: test_consumer.py  test_producer.py
tests/orca/assets/: test_order_books.py
